2025-02-04T01:00:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13126074968 # 555
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
* notice: last 14d: unq all: 11 16
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 447 840
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 451 844
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2025-02-03]

2025-02-03T01:01:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104301525 # 554
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: last 14d: unq all: 8 12
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 440 830
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 447 840
* notice: prev exec diff / last date diff / accum: unq all: +7 +10 -0 -0 / +7 +10 -0 -0 / 7 10
* notice: removed / changed dates: [] / [2025-02-02]

2025-02-02T01:03:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13094133189 # 553
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-02
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 439 829
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 440 830
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-01]

2025-02-01T01:04:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13083451862 # 552