@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-04T01:00:33Z",
+  "timestamp" : "2025-02-05T01:01:21Z",
   "count_outdated" : 828,
   "uniques_outdated" : 438,
-  "count" : 844,
-  "uniques" : 451,
+  "count" : 845,
+  "uniques" : 452,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 4,
       "uniques_minmax": [ 4, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-02-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
