@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 11,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2025-02-03T00:00:00Z",
       "count": 4,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-02-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
